--- a/brotliparser/brotliparser.csproj
+++ b/brotliparser/brotliparser.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Brotli.Core, Version=2.0.4.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Brotli.NET.2.0.4.2\lib\net45\Brotli.Core.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.2.0.246, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.1.2.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -55,10 +58,10 @@
   <ItemGroup>
     <Compile Include="BrotliUtils.cs" />
     <Compile Include="DirectoryIO.cs" />
-    <Compile Include="IOUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ByteArrayIO.cs" />
+    <Compile Include="TarIO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
